--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -14,30 +14,7 @@ library(dplyr)
 
 
 ## Covid Cases
-
-*Data Source*:
-https://github.com/nytimes/covid-19-data
-
-https://www.census.gov/data/tables/time-series/demo/popest/2010s-national-total.html
-
-
-### Description for Covid Cases
-This covid cases data is collected from New York Times Official GitHub. 
-It tracks cumulative cases for each state in the United States since late January. 
-Our collected data ends on November 29th. 
-
-We chose this dataset because the New York Times compiled this time series data from state and local governments and health departments in an attempt to provide a complete record of the ongoing outbreak.
-
-### Description for Covid Cases per Capita
-This is 2019 US population estimation for each state from U.S. Census Bureau. 
-We use this population and covid cases to produce a covid per capita for each state.
-
-
-### Basic Information about Dataset: 
-
-date(char) - year-month-day <br>
-cases (int) - cumulative cases <br>
-state(char) - each state in the U.S. <br> 
+For our covid cases, we integraled covid cases data from New York Times and census data from  U.S. Census Bureau. The summary of our data is beblow:
 
 ```{r}
 us_case = read.csv("./data/us-states.csv")
@@ -76,7 +53,8 @@ df_total_cases$case_ppl <-  round(df_total_cases$case_ppl, 3)
 
 df_total_cases$hover <- with(df_total_cases, paste(state, '<br>', "Covid cases",cases,"<br>",
                                                    "Covid cases per capita",case_ppl))
-                   
+      
+summary(df_total_cases)             
 ```   
 
 
