--- a/03-cleaning.Rmd
+++ b/03-cleaning.Rmd
@@ -1,7 +1,7 @@
 # Data transformation
 
-The code of our data transformation is [here](https://github.com/run-zhang/CovidImpact/blob/main/03-cleaning.Rmd)
-.
+The code of our data transformation is 
+[here](https://github.com/run-zhang/CovidImpact/blob/main/03-cleaning.Rmd).
 
 ```{r}
 library(tidyverse)
